# phyexp

./: .gitignore  AB_uncert.py  LICENSE  README.md  SLR.py  __init__.py  exp_uncert.py  meas.py  pyproject.toml  setup.py  sigfigs.py  utils.py
.github/workflows/: main.yml
demo/: readme.md
demo/密里根油滴实验/: .gitignore  密里根油滴实验报告.ipynb  密里根油滴实验报告.tex
demo/弗兰克-赫兹实验/: README.md  数据处理.ipynb  数据记录.xlsx
demo/氢原子光谱和里德伯常数的测量/: 氢原子光谱实验报告.ipynb
demo/氢原子光谱和里德伯常数的测量/预习报告原始数据/: README.md
demo/磁阻传感器与磁场测量/: .gitignore  实验报告.ipynb
demo/磁阻传感器与磁场测量/html/: 实验报告.html
demo/磁阻传感器与磁场测量/latex/: 实验报告.tex
demo/磁阻传感器与磁场测量/markdown/: 实验报告.md
phyexp/: AB_uncert.py  SLR.py  __init__.py  error.py  meas.py  plt.py  quantity.py  sigfigs.py  utils.py
ref/: _test_pint.py  _test_quantity.py  一元线性回归.py
test/: test A_uncert.py  test uncert_comb.py  test_re.py
